# NeuroCity

./: .gitignore  BLOCK_NERF_RENAME_SUMMARY.md  CHANGELOG.md  CLI_USAGE_EXAMPLES.md  CUDA_DIRECTORY_REORGANIZATION_SUMMARY.md  CUDA_DOCUMENTATION_SUMMARY.md  CUDA_OPTIMIZATION_ANALYSIS.md  CUDA_QUICK_START.md  CUDA_USAGE_GUIDE.md  INFNERF_IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MODELS_CREATION_SUMMARY.md  NERF_MIGRATION_SUMMARY.md  NEURAL_NETWORKS_MIGRATION_SUMMARY.md  NeuroCity.code-workspace  PROJECT_ARCHITECTURE_cn.md  PROJECT_ARCHITECTURE_en.md  README.md  README_PyTorchLightning.md  README_cn.md  RELEASE_CHECKLIST.md  SVRaster_Adaptive_Implementation_Summary.md  TEST_MIGRATION_SUMMARY.md  UPDATE_SUMMARY.md  VOXEL_RASTERIZER_REFACTOR_SUMMARY.md  build_cuda_extensions.py  clear_copilot_cache.sh  clear_copilot_python_cache.py  core_svraster_demo.py  demo_gfv_usage.py  demo_mega_nerf_plus.py  demo_svraster_inference.py  direct_svraster_demo.py  example_lightning_usage.py  example_multi_model_lightning.py  example_usage.py  fix_conda_zsh.sh  fix_python310_compatibility.py  fix_typing_imports.py  (+39 more)
.cursor/rules/: containers.mdc  deprecated.mdc  numberingmarkdown.mdc  pythonversioncheck.mdc  readme.mdc  testwithneurocity.mdc
.github/workflows/: python-checks.yml
backup_old_files/: urban_nerf_dnmp.py  urban_radiance_field.py
demo_data/: transforms.json
demo_data/poses/: pose_000.txt  pose_001.txt  pose_002.txt  pose_003.txt  pose_004.txt  pose_005.txt  pose_006.txt  pose_007.txt  pose_008.txt  pose_009.txt  pose_010.txt  pose_011.txt  pose_012.txt  pose_013.txt  pose_014.txt  pose_015.txt  pose_016.txt  pose_017.txt  pose_018.txt  pose_019.txt  pose_020.txt  pose_021.txt  pose_022.txt  pose_023.txt  pose_024.txt  pose_025.txt  pose_026.txt  pose_027.txt  pose_028.txt  pose_029.txt  pose_030.txt  pose_031.txt  pose_032.txt  pose_033.txt  pose_034.txt  pose_035.txt  pose_036.txt  pose_037.txt  pose_038.txt  pose_039.txt  (+20 more)
demos/: DEMO_CREATION_SUMMARY.md  README.md  SVRASTER_DEMOS_README.md  cuda_kernel_analysis.py  demo_block_nerf.py  demo_bungee_nerf.py  demo_classic_nerf.py  demo_datagen_simple.py  demo_datagen_usage.py  demo_dnmp_nerf.py  demo_gfv_usage.py  demo_global_ngp.py  demo_lightning_multi_model.py  demo_lightning_usage.py  demo_mega_nerf_plus.py  demo_mip_nerf.py  demo_nerfacto.py  demo_nerfs_usage.py  demo_plenoxels.py  demo_projection_rasterization.py  demo_pyramid_nerf.py  demo_refactored_voxel_rasterizer.py  demo_sampler_usage.py  demo_svraster.py  demo_svraster_adaptive.py  demo_svraster_advanced.py  demo_svraster_one.py  demo_svraster_rendering.py  demo_svraster_training.py  demo_voxel_rasterizer_cuda.py  final_lightning_demo.py  generate_test_vdb.py  instant_ngp_cuda_example.py  instant_ngp_cuda_simple.py  osm_to_vdb.py  performance_comparison.py  run_svraster_ablation.py  simple_ablation_demo.py  simple_lightning_demo.py  simple_vdb_generator.py  (+7 more)
docs/: SVRASTER_CLEANUP_SUMMARY.md  SVRASTER_COUPLED_ARCHITECTURE.md  SVRASTER_PYTHON310_COMPATIBILITY.md  SVRASTER_REFACTOR_COMPLETE.md  SVRASTER_REFACTOR_FINAL_SUMMARY.md
examples/: README.md  _template_example.py  block_nerf_example.py  bungee_nerf_example.py  classic_nerf_example.py  cnc_nerf_example.py  dnmp_nerf_example.py  grid_nerf_example.py  inf_nerf_example.py  instant_ngp_example.py  mega_nerf_example.py  mega_nerf_plus_example.py  mip_nerf_example.py  nerfacto_example.py  occupancy_net_example.py  plenoxels_example.py  pyramid_nerf_example.py  run_example.py  sdf_net_example.py  svraster_basic_usage.py  svraster_example.py
src/: models.txt
src/block-nerf/: README.md  README_cn.md  __init__.py  block_manager.py  block_nerf_model.py  render_block_nerf.py  train_block_nerf.py  trainer.py
src/bungee_nerf/: BUNGEE_NERF_SUMMARY.md  README.md  __init__.py  dataset.py  example_usage.py  multiscale_renderer.py  progressive_encoder.py  render_bungee_nerf.py  test_bungee_nerf.py  train_bungee_nerf.py  trainer.py  utils.py
src/classic_nerf/: README_cn.md  __init__.py  dataset.py  example_usage.py  test_classic_nerf.py  utils.py
src/datagen/: README.md  __init__.py  core.py
src/dnmp_nerf/: __init__.py  dataset.py  mesh_autoencoder.py  rasterizer.py  trainer.py
src/gfv/: GFV_MIGRATION_SUMMARY.md  README.md  __init__.py  core.py  dataset.py  example_usage.py  trainer.py
src/grid_nerf/: README_cn.md  __init__.py  core.py  dataset.py  example_usage.py  train_grid_nerf.py  trainer.py
src/instant_ngp/: README.md  README_cn.md  __init__.py  core.py  dataset.py  example_usage.py  test_instant_ngp.py  trainer.py
src/mega-nerf/: README.md  README_cn.md  __init__.py  mega_nerf_model.py  mega_nerf_trainer.py  render_mega_nerf.py  run_mega_nerf.py  train_mega_nerf.py  volumetric_renderer.py
src/mega_nerf_plus/: __init__.py  memory_manager.py  multires_renderer.py  (+1 more)
src/nerfs/instant_ngp/: CHANGELOG.md  FINAL_PROJECT_STATUS.md  Instant_NGP_Rendering_Implementation_cn.md  Instant_NGP_Training_Implementation_cn.md  LICENSE  MANIFEST.in  PERFORMANCE_COMPARISON_SUMMARY.md  README.md  README_CUDA_FINAL.md  README_CUDA_GTX1080Ti.md  README_cn.md  __init__.py  cli.py  core.py  cuda_model.py  dataset.py  example_usage.py  lightning_trainer.py  pyproject.toml  renderer.py  requirements.txt  run_tests.py  setup.py  trainer.py  utils.py  verify_release.py
src/nerfs/instant_ngp/cuda/: build_cuda.sh  hash_encoding_kernel.cu  instant_ngp_cuda.cpp  instant_ngp_cuda.h  performance_comparison.py  setup.py  simple_performance_comparison.py  simple_test.py
src/nerfs/instant_ngp/tests/: __init__.py  test_core.py  test_training.py
src/nerfs/instant_ngp/utils/: __init__.py  coordinate_utils.py  geometry_utils.py  hash_utils.py  regularization_utils.py  sampling_utils.py  visualization_utils.py
svraster_one/: README.md  __init__.py  config.py  core.py  losses.py  renderer.py  trainer.py  voxels.py
test_demo_scene/: cameras.json  sparse_points.ply  transforms_test.json  transforms_train.json  transforms_val.json
tests/: README.md  __init__.py  fix_imports.py  run_tests.py
tools/: convert_blender_to_svraster.py
(+543 files in other folders)
