[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocity"
version = "2.0.0"
authors = [
    { name="NeuroCity Development Team", email="info@neurocity.dev" },
]
description = "Advanced neural rendering toolkit with Plenoxels support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["neural rendering", "nerf", "plenoxels", "3d reconstruction", "computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.26.4",
    "scipy>=1.11.3",
    "opencv-python>=4.8.1",
    "pillow>=10.1.0",
    "matplotlib>=3.8.2",
    "tqdm>=4.66.1",
    "wandb>=0.15.12",
    "tensorboard>=2.14.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.2.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "tyro>=0.5.12",
    "open3d>=0.17.0",
    "trimesh>=4.0.5",
    "scikit-image>=0.22.0",
    "ninja>=1.11.1",
]

[project.urls]
Homepage = "https://github.com/neurocity/neurocity"
Documentation = "https://neurocity.readthedocs.io/"
Repository = "https://github.com/neurocity/neurocity.git"
"Bug Reports" = "https://github.com/neurocity/neurocity/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 